add helper class

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -11,6 +11,7 @@
 <body>
     <button id="portButton">open port</button>
     <button id="requestButton">send request</button>
+    <button id="testButton">togggle relay</button>
     <textarea id="output" style="font-family: monospace; font-size: 13px; width: 100%;" rows="20"></textarea>
     <div id="error" style="font-family: monospace; font-size: 13px; color: red;"></div>
 </body>
