refactor helper class

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <button id="portButton">open port</button>
-    <button id="requestButton">send request</button>
+    <button id="requestButton">read params</button>
     <button id="testButton">togggle relay</button>
-    <textarea id="output" style="font-family: monospace; font-size: 13px; width: 100%;" rows="20"></textarea>
+    <textarea id="output" style="font-family: monospace; font-size: 13px; width: 100%;" rows="40"></textarea>
     <div id="error" style="font-family: monospace; font-size: 13px; color: red;"></div>
 </body>
 
