--- a/wasm/index.html
+++ b/wasm/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <button id="portButton">open port</button>
+    <button id="portButton">select port</button>
     <button id="requestButton">read params</button>
-    <button id="testButton">togggle relay</button>
+    <button id="testButton1">togggle relay 1</button>
+    <button id="testButton2">togggle relay 2</button>
     <textarea id="output" style="font-family: monospace; font-size: 13px; width: 100%;" rows="40"></textarea>
     <div id="error" style="font-family: monospace; font-size: 13px; color: red;"></div>
 </body>
