add dummy port scan feature

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <button id="portButton">select port</button>
+    <button id="scanButton">scan port</button>
     <button id="requestButton">read params</button>
     <button id="testButton1">togggle relay 1</button>
     <button id="testButton2">togggle relay 2</button>
