refactor js features

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Modbus JS Magic</title>
+    <script async type="text/javascript" src="serial.js"></script>
     <script async type="text/javascript" src="script.js"></script>
     <script async type="text/javascript" src="module.js"></script>
 </head>
